added pictures as well as updates to the green eggs recipe page

--- a/recipes/green_eggs.html
+++ b/recipes/green_eggs.html
@@ -5,6 +5,16 @@
     <title>Green Eggs</title>
 </head>
 <body>
-    <h1>Green Eggs</h1>
+    <h1>Green Eggs and Ham</h1>
+    <img src="../pics/greenegg.jpg" alt="Green Eggs and Ham">
+    <p>Green eggs and ham, just like from Dr. Seuss!</p>
+    <p>An absolute classic dish to enjoy with obscure family and friends</p> 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Green eggs</li>
+        <li>Salt 'n Pepper</li>
+        <li>The presidential ham</li>
+    </ul>
+
 </body>
 </html>
