added ingredients and steps

--- a/recipes/green_eggs.html
+++ b/recipes/green_eggs.html
@@ -16,5 +16,13 @@
         <li>The presidential ham</li>
     </ul>
 
+    <h2>Steps</h2>
+    <ol>
+        <li>Crack the eggs and scramble them</li>
+        <li>Put the eggs on the frying pan and let em cook</li>
+        <li>Slice ham</li>
+        <li>Enjoy!</li>
+    </ol>
+
 </body>
 </html>
