--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/green_eggs.html">Green Eggs Recipe</a>
+    <img src="pics/ramsay.jpg" alt="Ramsay Meme">
+    <ul>
+        <li><a href="recipes/green_eggs.html">Green Eggs Recipe</a></li>
+        <li><a href="recipes/bulgogi.html">Bulgogi</a></li>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+    </ul>
 </body>
 </html>
