finished project, added recipes

--- a/recipes/bulgogi.html
+++ b/recipes/bulgogi.html
@@ -7,20 +7,21 @@
 <body>
     <h1>Bulgogi</h1>
     <img src="../pics/bulgogi.jpg" alt="Bulgogi">
-    <p>Green eggs and ham, just like from Dr. Seuss!</p>
-    <p>An absolute classic dish to enjoy with obscure family and friends</p> 
+    <p>Bulgogi, the traditional Korean meat dish!</p>
+    <p>An absolute banger dish to enjoy with your loved ones</p> 
     <h2>Ingredients</h2>
     <ul>
-        <li>Green eggs</li>
-        <li>Salt 'n Pepper</li>
-        <li>The presidential ham</li>
+        <li>Soy sauce</li>
+        <li>Marinated Bulgogi</li>
+        <li>Sesame seed oil</li>
+        <li>White Rice</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li>Crack the eggs and scramble them</li>
-        <li>Put the eggs on the frying pan and let em cook</li>
-        <li>Slice ham</li>
+        <li>Start the grill</li>
+        <li>Put the bulgogi on the grill and let it cook</li>
+        <li>Put cooked meat on plate and apply sauce and oil</li>
         <li>Enjoy!</li>
     </ol>
 
