--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
         <li><a href="recipes/bulgogi.html">Bulgogi</a></li>
         <li><a href="recipes/pizza.html">Pizza</a></li>
     </ul>
+
+    <p id="demo"></p>
+
+    <script>
+    document.getElementById("demo").innerHTML = "My First JavaScript";
+    </script>
 </body>
 </html>
